--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "3.6.2"
   },
   "dependencies": {
     "mongoose": "^8.19.1",
