--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cd packages/react-frontend && npm run dev",
     "prettier": "prettier --write .",
     "check-prettier": "prettier --check ."
+	"lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
