--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cd packages/react-frontend && npm run dev",
     "prettier": "prettier --write .",
-    "check-prettier": "prettier --check ."
+    "check-prettier": "prettier --check .",
 	"lint": "eslint ."
   },
   "author": "",
