--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "mongoose": "^8.19.1",
     "react-router-dom": "^7.9.4"
   }
